ProjetCompil/Verif/Test/fail/typeNonCompatible16.cas
program
	A : array [1..14] of integer;
	B : real;
	C : 1..10;
begin
	B := C * A;
end.
	
